Beech wala part added

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -131,18 +131,157 @@
     <!--Channel page-->
     <div class="channel_page_container">
         <div class="channel_info_container">
-            <img src="Images/profile.png"/>
-            <h1 style="color: white;">Channel Name</h1>
+            <img src="Images/profile.png" class="channel_main_image"/>
+            <div class="front_channel_name_yt">
+                Channel Name
+            </div>
         </div>
         <div class="channel_video_container">
-            
-        </div>
-        <div class="channel_playlist_container">
+            <div class="channel_video_list">
+                <div class="video_type_heading">
+                    <div class="front_video_section_title">Videos</div>
+                    <div class="front_playlist_section_title">Playlists</div>
+                </div>
+                <!-- THIS IS FOR CHANNEL PAGE VIDEOS BLOCK -->
+                <div class="channel_video_preview_container">
+                    <div class="front_video_container">
+                        <div class="front_thumbnail_container">
+                            <img src="./Images/thumbnail.jpg" class="front_thumbnail">
+                            <div class="front_video_time">00:00</div>
+                        </div>
+                        <div class="front_video_title">
+                            Title here
+                        </div>
+                    </div>
+                </div>
+                <!-- THIS IS FOR CHANNEL PAGE VIDEOS BLOCK -->
+                <!-- THIS IS FOR CHANNEL PAGE VIDEOS BLOCK -->
+                <div class="channel_video_preview_container">
+                    <div class="front_video_container">
+                        <div class="front_thumbnail_container">
+                            <img src="./Images/thumbnail.jpg" class="front_thumbnail">
+                            <div class="front_video_time">00:00</div>
+                        </div>
+                        <div class="front_video_title">
+                            Title here
+                        </div>
+                    </div>
+                </div>
+                <!-- THIS IS FOR CHANNEL PAGE VIDEOS BLOCK -->
+                <!-- THIS IS FOR CHANNEL PAGE VIDEOS BLOCK -->
+                <div class="channel_video_preview_container">
+                    <div class="front_video_container">
+                        <div class="front_thumbnail_container">
+                            <img src="./Images/thumbnail.jpg" class="front_thumbnail">
+                            <div class="front_video_time">00:00</div>
+                        </div>
+                        <div class="front_video_title">
+                            Title here
+                        </div>
+                    </div>
+                </div>
+                <!-- THIS IS FOR CHANNEL PAGE VIDEOS BLOCK -->
+                <!-- THIS IS FOR CHANNEL PAGE VIDEOS BLOCK -->
+                <div class="channel_video_preview_container">
+                    <div class="front_video_container">
+                        <div class="front_thumbnail_container">
+                            <img src="./Images/thumbnail.jpg" class="front_thumbnail">
+                            <div class="front_video_time">00:00</div>
+                        </div>
+                        <div class="front_video_title">
+                            Title here
+                        </div>
+                    </div>
+                </div>
+                <!-- THIS IS FOR CHANNEL PAGE VIDEOS BLOCK -->
+        
 
+                <!-- THIS IS FOR CHANNEL PAGE PLAYLIST BLOCK -->
+                <div class="channel_video_preview_container front_playlist">
+                    <div class="front_video_container">
+                        <div class="front_thumbnail_container">
+                            <img src="./Images/thumbnail.jpg" class="front_thumbnail">
+                            <div class="front_playlist_info_container">
+                                <i class="fa-solid fa-list playlist_icon_others_front"></i>
+                                <div class="front_playlist_total_count">10</div>
+                            </div>
+                        </div>
+                        <div class="front_video_title">
+                            Playlist here
+                        </div>
+                    </div>
+                </div>
+                <!-- THIS IS FOR CHANNEL PAGE PLAYLIST BLOCK -->
+                <!-- THIS IS FOR CHANNEL PAGE PLAYLIST BLOCK -->
+                <div class="channel_video_preview_container front_playlist">
+                    <div class="front_video_container">
+                        <div class="front_thumbnail_container">
+                            <img src="./Images/thumbnail.jpg" class="front_thumbnail">
+                            <div class="front_playlist_info_container">
+                                <i class="fa-solid fa-list playlist_icon_others_front"></i>
+                                <div class="front_playlist_total_count">10</div>
+                            </div>
+                        </div>
+                        <div class="front_video_title">
+                            Playlist here
+                        </div>
+                    </div>
+                </div>
+                <!-- THIS IS FOR CHANNEL PAGE PLAYLIST BLOCK -->
+                <!-- THIS IS FOR CHANNEL PAGE PLAYLIST BLOCK -->
+                <div class="channel_video_preview_container front_playlist">
+                    <div class="front_video_container">
+                        <div class="front_thumbnail_container">
+                            <img src="./Images/thumbnail.jpg" class="front_thumbnail">
+                            <div class="front_playlist_info_container">
+                                <i class="fa-solid fa-list playlist_icon_others_front"></i>
+                                <div class="front_playlist_total_count">10</div>
+                            </div>
+                        </div>
+                        <div class="front_video_title">
+                            Playlist here
+                        </div>
+                    </div>
+                </div>
+                <!-- THIS IS FOR CHANNEL PAGE PLAYLIST BLOCK -->
+                <!-- THIS IS FOR CHANNEL PAGE PLAYLIST BLOCK -->
+                <div class="channel_video_preview_container front_playlist">
+                    <div class="front_video_container">
+                        <div class="front_thumbnail_container">
+                            <img src="./Images/thumbnail.jpg" class="front_thumbnail">
+                            <div class="front_playlist_info_container">
+                                <i class="fa-solid fa-list playlist_icon_others_front"></i>
+                                <div class="front_playlist_total_count">10</div>
+                            </div>
+                        </div>
+                        <div class="front_video_title">
+                            Playlist here
+                        </div>
+                    </div>
+                </div>
+                <!-- THIS IS FOR CHANNEL PAGE PLAYLIST BLOCK -->
+                <!-- THIS IS FOR CHANNEL PAGE PLAYLIST BLOCK -->
+                <div class="channel_video_preview_container front_playlist">
+                    <div class="front_video_container">
+                        <div class="front_thumbnail_container">
+                            <img src="./Images/thumbnail.jpg" class="front_thumbnail">
+                            <div class="front_playlist_info_container">
+                                <i class="fa-solid fa-list playlist_icon_others_front"></i>
+                                <div class="front_playlist_total_count">10</div>
+                            </div>
+                        </div>
+                        <div class="front_video_title">
+                            Playlist here
+                        </div>
+                    </div>
+                </div>
+                <!-- THIS IS FOR CHANNEL PAGE PLAYLIST BLOCK -->
+            </div>
         </div>
     </div>
 
 </body>
     <script src = "OAuth.js"></script>
     <script src="styleScript.js"></script>
+    <script src="styleScriptHome.js"></script>
 </html>
