video part done

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -144,7 +144,7 @@
                         <div class="front_playlist_section_title">Playlists</div>
                     </div>
                     <!-- THIS IS FOR CHANNEL PAGE VIDEOS BLOCK -->
-                    <div class="channel_video_preview_container">
+                    <div class="channel_video_preview_container" id = "channelVideoDiv">
                         <div class="front_video_container">
                             <div class="front_thumbnail_container">
                                 <img src="./Images/thumbnail.jpg" class="front_thumbnail">
