remove btn added

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -112,8 +112,17 @@
                             </div>
                         </div>
                         <div class="rightsidebar__playlist_info_container">
-                            <div class="rightsidebar__playlist_info_title"></div>
-                            <div class="rightsidebar__playlist_info_owner"></div>
+                            <div class="rightsidebar__playlist_info_title">
+                                <!-- Playlist name here -->
+                            </div>
+                            <div class="rightsidebar__playlist_info_owner">
+                                <div class="rightsidebar_playlist_info_owner_name">
+                                    <!-- Owner name here -->
+                                </div>
+                                <button class="remove_playlist_from_others_btn">
+                                    Remove playlist
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
