--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -26,8 +26,11 @@
             <div class="header__account_notification">
                 <i class="fa-solid fa-bell header__account_notification_icon"></i>
             </div>
-            <div class="header__account_photo">
+            <div id="header__account_photo">
                 <img src = "Images/profile.png" id = "image"/>
+                <div class="header__logout_container">
+                    Logout
+                </div>
             </div>
         </div>
     </div>
