logout btn added

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -26,7 +26,7 @@
             <div class="header__account_notification">
                 <i class="fa-solid fa-bell header__account_notification_icon"></i>
             </div>
-            <div id="header__account_photo">
+            <div class="header__account_photo">
                 <img src = "Images/profile.png" id = "image"/>
                 <div class="header__logout_container">
                     Logout
