Everthing working fine fixed the scope for oauth2

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -137,7 +137,7 @@
     <!--video playback-->
     <div class="main__video_playback_container" style="display: none" id="smallVideoPlayback">
         <div class="main__video_playback">
-            <iframe class="main_video" src="" style="height: 100%; width: 100%;"></iframe>
+            <iframe class="main_video" src="" style="height: 100%; width: 100%;" allowfullscreen></iframe>
         </div>
     </div>
 
